# Notes

./: .gitignore  CMakeLists.txt  README.md
forms/: AboutWindow.ui  MainWindow.ui  NoteButton.ui  NoteEditingTab.ui  NoteEditor.ui  NoteSortOptionsWidget.ui  NotesDisplayingTab.ui  SearchBar.ui
include/: ColorButton.h  ColorPicker.h  ElidedLabel.h  FolderData.h  FolderMimeData.h  FolderTreeDelegate.h  FolderTreeItem.h  FolderTreeModel.h  FolderTreeModelRole.h  FolderTreeView.h  ImageDownloader.h  MainWindow.h  Note.h  NoteButton.h  NoteContentEdit.h  NoteData.h  NoteEditingTab.h  NoteEditor.h  NoteListDelegate.h  NoteListModel.h  NoteListModelRole.h  NoteListView.h  NoteListViewSelectionMenu.h  NoteMimeData.h  NoteSortFilterProxyModel.h  NoteSortOptionsWidget.h  NotesDisplayingTab.h  NotesManager.h  PersistenceManager.h  SearchBar.h  SpecialFolderId.h  Utils.h
resources/: images.qrc
src/: ColorButton.cpp  ColorPicker.cpp  ElidedLabel.cpp  FolderData.cpp  FolderMimeData.cpp  FolderTreeDelegate.cpp  FolderTreeItem.cpp  FolderTreeModel.cpp  FolderTreeView.cpp  ImageDownloader.cpp  MainWindow.cpp  Note.cpp  NoteButton.cpp  NoteContentEdit.cpp  NoteData.cpp  NoteEditingTab.cpp  NoteEditor.cpp  NoteListDelegate.cpp  NoteListModel.cpp  NoteListView.cpp  NoteListViewSelectionMenu.cpp  NoteMimeData.cpp  NoteSortFilterProxyModel.cpp  NoteSortOptionsWidget.cpp  NotesDisplayingTab.cpp  NotesManager.cpp  PersistenceManager.cpp  SearchBar.cpp  Utils.cpp  main.cpp
